# pi-drive

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: main.yml
apps/backend/: .dockerignore  .env.example  Dockerfile  README.md  config.py  crypto_utils.py  generate_secrets.py  main.py  middleware.py  models.py  pyproject.toml  requirements.txt  utils.py
apps/backend/routes/: __init__.py  directories.py  files.py  media.py  operations.py  shared.py  shares.py  users.py
apps/frontend/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json
apps/frontend/prisma/: schema.prisma
apps/frontend/src/: middleware.ts
apps/frontend/src/app/: globals.css  layout.tsx  loading.tsx
apps/frontend/src/app/components/: Home.tsx  HomeInit.tsx  Main.tsx  Sidebar.tsx  TitleManager.tsx  TopNav.tsx
apps/frontend/src/app/home/: layout.tsx
apps/frontend/src/app/hooks/: useCopyPasteCut.ts  useCreateFile.ts  useCreateFolder.ts  useDebounce.ts  useDeleteItems.ts  useDownloadItems.ts  useDragAndDrop.ts  useFetchDirItems.ts  useFetchSharedDirItems.ts  useItemSelection.ts  useKeyboardNavigation.ts  useMoveItems.ts  useOpenNewFolder.ts  useOptimisticChange.ts  useRenameFile.ts  useSelectAll.ts  (+2 more)
apps/frontend/src/components/: getFileIcon.tsx  logout-button.tsx  theme-provider.tsx  useToast.tsx
apps/frontend/src/lib/: auth-middleware.ts  auth-server-component.ts  auth-server.ts  auth.ts  axios.ts  client.ts  fileIconMap.ts  getDirPath.ts  isPreviewable.ts  readable_size.ts  relative_time.ts  server.ts  types.d.ts  utils.ts
(+49 files in other folders)
